# WorldGenerator3D

./: .gitignore  CMakeLists.txt
res/shaders/: basic.frag  basic.vert
src/: camera.cpp  file.cpp  input.cpp  main.cpp  shader.cpp
src/include/: camera.h  shader.h  types.h
